причесывание основной страницы html и основных классов

--- a/blocks/element/__like-button/element__like-button.css
+++ b/blocks/element/__like-button/element__like-button.css
@@ -1,6 +1,6 @@
 .element__like-button {
-  min-width: 22px;
-  min-height: 19px;
+  width: 22px;
+  height: 19px;
   background-image: url(../../../images/like-button.svg);
   background-color: transparent;
   background-repeat: no-repeat;
