--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -1,13 +1,11 @@
 .footer {
   max-width: calc(100vw - 19px*2);
   margin: 0 auto;
-  padding-top: 66px;
-  padding-bottom: 60px;
+  padding: 66px 0 60px;
 }
 
 @media screen and (max-width: 767px) {
   .footer {
-    padding-top: 48px;
-    padding-bottom: 36px;
+    padding: 48px 0 36px;
   }
 }
