--- a/blocks/logo/logo.css
+++ b/blocks/logo/logo.css
@@ -1,11 +1,11 @@
-.header__logo {
+.logo {
   max-width: 142px;
   min-height: 33px;
   cursor: pointer;
 }
 
 @media screen and (max-width: 767px) {
-  .header__logo {
+  .logo {
     max-width: 103.74px;
     min-height: 24.4px;
   }
