--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -2,14 +2,16 @@
   width: 100%;
   max-width: calc(100vw - 27px*2);
   min-height: 74px;
-  border-bottom: 1px solid #545454;
+  border-bottom: 1px solid rgba(84, 84, 84, 0.7);
   margin: 0 auto;
   padding-top: 45px;
 }
 
 @media screen and (max-width: 767px) {
   .header {
+    max-width: 100%;
     min-height: 56px;
     padding-top: 28px;
+    padding-left: 27px;
   }
 }
