--- a/blocks/profile/__add-button/profile__add-button.css
+++ b/blocks/profile/__add-button/profile__add-button.css
@@ -6,6 +6,7 @@
   background-position: center;
   background-color: #000000;
   border: 2px solid #ffffff;
+  border-radius: 2px;
   box-sizing: border-box;
   cursor: pointer;
   margin-left: auto;
