--- a/blocks/element/__like-button/element__like-button.css
+++ b/blocks/element/__like-button/element__like-button.css
@@ -1,5 +1,5 @@
 .element__like-button {
-  width: 22px;
+  min-width: 22px;
   height: 19px;
   background-image: url(../../../images/like-button.svg);
   background-color: transparent;
