--- a/blocks/popup/__input/popup__input.css
+++ b/blocks/popup/__input/popup__input.css
@@ -1,11 +1,11 @@
-.popup__job {
+.popup__input {
   min-height: 27px;
   font-size: 14px;
   line-height: 17px;
   font-style: normal;
   font-weight: 400;
-  margin: 0;
-  padding: 30px 0 0;
+  margin: 0 0 30px;
+  padding: 0 0 0px;
   border: 0;
   outline: 0;
   border-bottom: 1px solid rgba(0, 0, 0, 0.2);
