fix: горизонтальная прокрутка из-за неправильных настроек headet на разрешении 320-767

--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -9,9 +9,8 @@
 
 @media screen and (max-width: 767px) {
   .header {
-    max-width: 100%;
+    max-width: 100vw;
     min-height: 56px;
     padding-top: 28px;
-    padding-left: 27px;
   }
 }
