--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -9,7 +9,7 @@
 
 @media screen and (max-width: 767px) {
   .header {
-    max-width: 100vw;
+    max-width: 100%;
     min-height: 56px;
     padding-top: 28px;
   }
