fix: 1) к profile__name и profile__job применимо свойство text-overflow: ellipsis; 2) исправлены названия для контейнера для карточек и для самих карточек

--- a/blocks/cards/cards.css
+++ b/blocks/cards/cards.css
@@ -1,9 +1,9 @@
-.elements {
+.cards {
   padding-top: 50px;
 }
 
 @media screen and (max-width: 767px) {
-  .elements {
+  .cards {
     padding-top: 36px;
   }
 }
