--- a/blocks/card/__like-button/card__like-button.css
+++ b/blocks/card/__like-button/card__like-button.css
@@ -1,4 +1,4 @@
-.element__like-button {
+.card__like-button {
   min-width: 22px;
   height: 19px;
   background-image: url(../../../images/like-button.svg);
@@ -8,6 +8,6 @@
   border: 0;
   cursor: pointer;
 }
-.element__like-button:hover {
+.card__like-button:hover {
   opacity: 0.6;
 }
