--- a/pages/index.css
+++ b/pages/index.css
@@ -29,3 +29,7 @@
 @import url(../blocks/popup/__form/popup__form.css);
 @import url(../blocks/popup/__input/popup__input.css);
 @import url(../blocks/popup/__button/popup__button.css);
+@import url(../blocks/popup/_type/popup_type_view-card.css);
+@import url(../blocks/popup/__view-card/popup__view-card.css);
+@import url(../blocks/popup/__image/popup__image.css);
+@import url(../blocks/popup/__image-caption/popup__image-caption.css);
