--- a/blocks/card/__like-button/card__like-button.css
+++ b/blocks/card/__like-button/card__like-button.css
@@ -6,8 +6,9 @@
   background-repeat: no-repeat;
   background-position: center;
   border: 0;
+  outline: 0;
   cursor: pointer;
 }
 .card__like-button:hover {
-  opacity: 0.6;
+  opacity: 0.5;
 }
