--- a/blocks/card/card.css
+++ b/blocks/card/card.css
@@ -1,6 +1,5 @@
 .card {
-  max-width: 282px;
-  min-height: 362px;
+  position: relative;
   background-color: #ffffff;
   border-radius: 10px;
   overflow: hidden;
