--- a/blocks/popup/__close-button/popup__close-button.css
+++ b/blocks/popup/__close-button/popup__close-button.css
@@ -12,6 +12,7 @@
   border: 0;
   padding: 0;
   cursor: pointer;
+  transition: opacity 0.2s linear;
 }
 .popup__close-button:hover {
   opacity: 0.6;
