--- a/blocks/profile/__edit-button/profile__edit-button.css
+++ b/blocks/profile/__edit-button/profile__edit-button.css
@@ -9,6 +9,7 @@
   border: 1px solid #ffffff;
   cursor: pointer;
   padding: 0;
+  transition: opacity 0.2s linear;
 }
 .profile__edit-button:hover {
   opacity: 0.6;
