--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -1,9 +1,12 @@
 .popup {
-  display: none;
+  display: flex;
   position: fixed;
   top: 0;
   right: 0;
   left: 0;
   bottom: 0;
   color: #000000;
+  visibility: hidden;
+  opacity: 0;
+  transition: visibility 0.3s, opacity 0.3s linear;
 }
