--- a/blocks/popup/__input/popup__input.css
+++ b/blocks/popup/__input/popup__input.css
@@ -5,7 +5,7 @@
   font-style: normal;
   font-weight: 400;
   margin: 0 0 30px;
-  padding: 0 0 0px;
+  padding: 0;
   border: 0;
   outline: 0;
   border-bottom: 1px solid rgba(0, 0, 0, 0.2);
